--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -68,7 +68,7 @@
  
 @layer base {
   * {
-    @apply border-gray-200 dark:border-gray-800;
+    @apply border-neutral-200 dark:border-neutral-800;
   }
   body {
     @apply bg-background text-foreground;
